# SmartPtr

./: CMakeLists.txt  README.md  main.c  makefile  smart-ptr.c  smart-ptr.h
